--- a/src/main/resources/com/nizar/todogamedevapp/main-view.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/main-view.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.nizar.todogamedevapp.MainController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="410.0" prefWidth="530.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.MainController">
+   <children>
+      <Button layoutX="211.0" layoutY="171.0" mnemonicParsing="false" onAction="#addNote" prefHeight="34.0" prefWidth="76.0" text="Add Note">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
