--- a/src/main/resources/com/nizar/todogamedevapp/note.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/note.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.MainController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.NoteController">
    <children>
       <TextArea fx:id="noteArea" layoutX="71.0" layoutY="42.0" prefHeight="222.0" prefWidth="218.0" />
       <Text layoutX="143.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add your note on the text area" wrappingWidth="292.08984375">
@@ -14,7 +14,7 @@
             <Font size="17.0" />
          </font>
       </Text>
-      <Button layoutX="316.0" layoutY="239.0" mnemonicParsing="false" onAction="#addTextNode" text="Add" />
+      <Button layoutX="316.0" layoutY="239.0" mnemonicParsing="false" onAction="#addNote" text="Add" />
       <Text fx:id="addedNote" layoutX="335.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0">
          <font>
             <Font size="20.0" />
