--- a/src/main/resources/com/nizar/todogamedevapp/login.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/login.fxml
@@ -6,21 +6,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="358.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.LoginController">
+<AnchorPane fx:id="scenePane" prefHeight="358.0" prefWidth="374.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.LoginController">
    <children>
-      <Button layoutX="303.0" layoutY="215.0" mnemonicParsing="false" onAction="#onLogin" text="Login" />
-      <Button layoutX="225.0" layoutY="215.0" mnemonicParsing="false" text="Register" />
-      <TextField layoutX="200.0" layoutY="167.0" />
-      <TextField layoutX="200.0" layoutY="125.0" />
-      <Label layoutX="140.0" layoutY="124.0" prefHeight="27.0" prefWidth="60.0" text="E-mail">
+      <Button layoutX="261.0" layoutY="215.0" mnemonicParsing="false" onAction="#onLogin" text="Login" />
+      <Button layoutX="173.0" layoutY="215.0" mnemonicParsing="false" text="Register" />
+      <TextField layoutX="158.0" layoutY="167.0" />
+      <TextField layoutX="158.0" layoutY="125.0" />
+      <Label layoutX="60.0" layoutY="124.0" prefHeight="27.0" prefWidth="60.0" text="E-mail">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="120.0" layoutY="166.0" text="Password">
+      <Label layoutX="45.0" layoutY="166.0" text="Password">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <Button fx:id="exitButton" layoutX="284.0" layoutY="313.0" mnemonicParsing="false" onAction="#onExit" prefHeight="31.0" prefWidth="75.0" text="Exit">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
