--- a/src/main/resources/com/nizar/todogamedevapp/note.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/note.fxml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.NoteController">
    <children>
-      <TextArea fx:id="noteArea" layoutX="87.0" layoutY="60.0" prefHeight="273.0" prefWidth="427.0" />
+      <TextArea fx:id="noteArea" layoutX="118.0" layoutY="134.0" prefHeight="199.0" prefWidth="277.0" promptText="Write your todo or note here" />
       <Text layoutX="182.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add your note on the text area" wrappingWidth="235.08984375">
          <font>
             <Font size="17.0" />
          </font>
       </Text>
-      <Button layoutX="244.0" layoutY="342.0" mnemonicParsing="false" onAction="#addNote" prefHeight="44.0" prefWidth="112.0" text="Add">
+      <Button layoutX="404.0" layoutY="288.0" mnemonicParsing="false" onAction="#addNote" prefHeight="44.0" prefWidth="77.0" text="Add">
          <font>
             <Font size="20.0" />
          </font></Button>
@@ -23,5 +25,8 @@
             <Font size="20.0" />
          </font>
       </Text>
+      <CheckBox fx:id="featureCheck" layoutX="14.0" layoutY="108.0" mnemonicParsing="false" text="Feature" />
+      <CheckBox fx:id="bugCheck" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" text="Bug" />
+      <TextField fx:id="titleArea" layoutX="118.0" layoutY="96.0" prefHeight="25.0" prefWidth="277.0" promptText="Title" />
    </children>
 </AnchorPane>
