--- a/src/main/resources/com/nizar/todogamedevapp/noteslist.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/noteslist.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.nizar.todogamedevapp.NotesListController">
    <children>
-      <Label fx:id="textLabel" layoutX="34.0" layoutY="42.0" prefHeight="169.0" prefWidth="266.0" />
+      <Text fx:id="text" layoutX="14.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="38.13671875" />
    </children>
 </AnchorPane>
