--- a/src/main/resources/com/nizar/todogamedevapp/authentication/register.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/authentication/register.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.nizar.todogamedevapp.RegisterController"
+            fx:controller="com.nizar.todogamedevapp.authentication.RegisterController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
