--- a/src/main/resources/com/nizar/todogamedevapp/notes/notetext.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/notes/notetext.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
@@ -8,5 +9,6 @@
    <children>
       <Button fx:id="backButton" layoutX="515.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
       <Text fx:id="todoTextNote" layoutX="18.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="563.7366943359375" />
+      <CheckBox fx:id="completedCheckBox" layoutX="33.0" layoutY="353.0" mnemonicParsing="false" onAction="#onCompletedCheck" text="Completed" />
    </children>
 </AnchorPane>
