--- a/src/main/resources/com/nizar/todogamedevapp/notes/completedNotes.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/notes/completedNotes.fxml
@@ -9,5 +9,6 @@
    <children>
       <ListView fx:id="completedNotes" layoutX="83.0" layoutY="47.0" prefHeight="326.0" prefWidth="200.0" />
       <Button layoutX="516.0" layoutY="355.0" mnemonicParsing="false" onAction="#OnBack" text="Back" />
+      <Button layoutX="386.0" layoutY="355.0" mnemonicParsing="false" text="Show Selected" />
    </children>
 </AnchorPane>
