--- a/src/main/resources/com/nizar/todogamedevapp/notes/completedNotes.fxml
+++ b/src/main/resources/com/nizar/todogamedevapp/notes/completedNotes.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -9,6 +10,7 @@
    <children>
       <ListView fx:id="completedNotes" layoutX="83.0" layoutY="47.0" prefHeight="326.0" prefWidth="200.0" />
       <Button layoutX="516.0" layoutY="355.0" mnemonicParsing="false" onAction="#OnBack" text="Back" />
-      <Button layoutX="386.0" layoutY="355.0" mnemonicParsing="false" text="Show Selected" />
+      <Button layoutX="386.0" layoutY="355.0" mnemonicParsing="false" onAction="#onCheck" text="Show Selected" />
+      <Label fx:id="category" layoutX="137.0" layoutY="23.0" prefHeight="17.0" prefWidth="93.0" />
    </children>
 </AnchorPane>
